<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_cluster"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_cluster" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/vector_drawable" />
        <item
            android:id="@+id/nav_multi_lang"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/multi_language" />
        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/realm_db" />
        <item
            android:id="@+id/nav_videothumbnail"
            android:icon="@drawable/ic_play_for_work_black_24dp"
            android:title="@string/video_thumbnail" />
        <item
            android:id="@+id/nav_placepicker"
            android:icon="@drawable/ic_location_on_white_24dp"
            android:title="@string/place_picker" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/collection" />
        <item
            android:id="@+id/nav_data_logger"
            android:icon="@drawable/ic_datalogger"
            android:title="@string/data_logger" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_chart"
            android:title="@string/chart" />
        <item
            android:id="@+id/nav_ad"
            android:icon="@drawable/ic_ads"
            android:title="@string/adMob" />

        <item
            android:id="@+id/nav_alrm_srvice"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/alarm_receiver" />

        <item
            android:id="@+id/nav_payu_srvice"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/payu" />
        <item
            android:id="@+id/nav_image_cropper"
            android:icon="@drawable/ic_crop_black_24dp"
            android:title="@string/image_crop" />
        <item
            android:id="@+id/nav_scroll_tab"
            android:icon="@drawable/ic_tab_black_24dp"
            android:title="@string/scroll_tab" />

    </group>

</menu>
