<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_cluster"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_cluster" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/vector_drawable" />
        <item
            android:id="@+id/nav_multi_lang"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/multi_language" />
        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/realm_db" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_more"
            android:title="@string/more" />
    </group>

</menu>
