<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:orderInCategory="100"
        android:title="@string/select_language"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/eng"
                android:orderInCategory="99"
                android:title="@string/english"
                app:showAsAction="never" />
            <item
                android:id="@+id/guj"
                android:orderInCategory="98"
                android:title="@string/gujarati"
                app:showAsAction="never" />

            <item
                android:id="@+id/urdu"
                android:orderInCategory="97"
                android:title="@string/urdu"
                app:showAsAction="never" />

            <item
                android:id="@+id/hin"
                android:orderInCategory="96"
                android:title="@string/hindi"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>